# pp

./: .gitignore  Dockerfile  README.md  README.mmd  pp.code-workspace
.github/workflows/: dev-env.yml  development-environment.yml  docker-image.yml  healthcheck.yml  manual-apply.yml  manual-development-environment.yml  repo-docker-image.yml  schedule-healthcheck.yml  schedule-keep.yml  schedule-manual-restart.yml  schedule-restart.yml  scheduled-restart.yml
insecure/: package-lock.json  package.json  vercel.json
insecure/pages/: index.txt.ts
nossl/: index.html
peercast/: peercast.ini.template
root/: Dockerfile  Dockerfile.cron  Dockerfile.generate-index-txt  Dockerfile.init  Dockerfile.peercast  Dockerfile.peercastnext  README.md  main.tf  run.sh  terraform.tf
root/cron.d/: certbot
root/generate-index-txt/: Cargo.toml
root/generate-index-txt/src/: index_txt.rs  main.rs  p_at.rs  peercast_xml.rs  utils.rs
root/init/: Dockerfile
root/nginx/: Dockerfile  insecure.conf.template  peercast.conf.template  root.conf.template  run.sh
root/peercast/: peercast.ini.template  run.sh
root/scripts/: extract-secrets.sh  reverse-terraform.sh
scripts/: channel-names.ts  extract-secrets.sh  num-channels.ts  reverse-terraform.sh
utils/: gzip-base64.mjs
www/: .eslintrc  package-lock.json  package.json  vercel.json
www/components/: CopyBox.tsx  Footer.tsx  Head.tsx  SupportEmail.tsx
www/pages/: _document.tsx  feed.tsx  index.tsx  index.txt.ts  terms.tsx
www/utils/: ContentEncoder.ts  VideoPlayerRepository.ts  createVideoPlayer.ts  dummy.ts  env.ts  (+9 more)
(+30 files in other folders)
