[package]
name = "generate-index-txt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
cloud-storage = { version = "0.11.1", features = ["global-client"] }
form_urlencoded = "1.1.0"
quick-xml = { version = "0.27.1", features = ["serialize"] }
regex = "1.7.1"
reqwest = "0.11.14"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
